# STI_Project

./: .gitmodules  README.md
OEE_Demo/Create_Elemenst/: CreatChart.py  CreatProcessBar.py
OEE_Demo/Document/: Part list Valy Demo 03012025.xlsx
OEE_Demo/Firmware/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
OEE_Demo/Firmware/components/DS1307/: CMakeLists.txt  DS1307.c  DS1307.h
OEE_Demo/Firmware/main/: CMakeLists.txt  Ethernet.c  Ethernet.h  HMI_Handel.cpp  HMI_Handel.h  IO.c  IO.h  RTC.c  RTC.h  Websetup.c  Websetup.h  Wifi.c  Wifi.h  _uart.cpp  _uart.h  app_main.cpp  config.h  datatype.h  debug.h  eeprom.cpp  eeprom.h  flag.c  flag.h  idf_component.yml  main.h  ota.c  ota.h  socketioclient_api.cpp  socketioclient_api.h
OEE_Demo/Firmware/spiffs/: login.html
OEE_Demo/HMI/: DWprj.hmi  DisplayConfig.xls  TouchConfig.xls
OEE_Demo/HMI/DWIN_SET/: 0_DWIN_ASC.HZK  32.icl  41.icl  42.icl  48.icl
OEE_Demo/HMI/TFT/: 00.png.tft  01.png.tft  02.png.tft  03.png.tft  04.png.tft  05.png.tft  100.png.tft  101.png.tft  102.png.tft  103.png.tft  104.png.tft
